# diffeek

./: .gitignore  ARCHITECTURE.md  Doxyfile  Makefile  README.md  diffeek.1  prohlaseni.txt  zadani.txt
examples/: automated-check.sh
examples/ppm/: arch-chan.ppm  empty.ppm  test.ppm  test2.ppm
examples/tests/: b2.txt  d2.txt  e2.txt  g4.txt  sourceB.txt  u1.txt
examples/text/: 1-addit  1-delet  1-modif  1-source  10k.txt  10k.txt.modified  20k.txt  absurd.txt  absurd.txt.delet  ignore-case-whitespace-test-destination  ignore-case-whitespace-test-source  out.patch
src/: ArgParser.cpp  ArgParser.h  CMakeLists.txt  Diffeek.cpp  Diffeek.h  README.md  Utility.cpp  main.cpp
src/DataOutput/: DataDifference.cpp  DataDifference.h  DataOutput.cpp  DataOutput.h  DirectOutput.cpp  DirectOutput.h  GraphicalOutput.cpp  GraphicalOutput.h  PatchfileOutput.cpp  PatchfileOutput.h
src/FileDiffer/: BinaryFileDiffer.cpp  BinaryFileDiffer.h  DirectoryDiffer.cpp  DirectoryDiffer.h  FileDiffer.cpp  FileDiffer.h  PPMFileDiffer.cpp  PPMFileDiffer.h  TextFileDiffer.cpp  TextFileDiffer.h
src/FileDiffer/DataStructures/: LevenshteinMatrix.cpp  LevenshteinMatrix.h  PPMFile.cpp  PPMFile.h
src/Logger/: Logger.cpp  Logger.h  StderrLogger.cpp  StderrLogger.h
